--- a/environments/.env.local
+++ b/environments/.env.local
@@ -6,6 +6,10 @@ APP_VERSION=1.0.0
 NODE_ENV=development
 PORT=4000
 
+#############
+# onboarding Configuration
+USER_TABLE_NAME=users
+
 ############# 
 # Database Configuration
 DB_TYPE=mysql
