--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
     "typeorm": "^0.3.21",
+    "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0",
     "winston": "^3.12.0",
     "zod": "^3.24.2"
