--- a/environments/.env.local
+++ b/environments/.env.local
@@ -8,7 +8,7 @@ PORT=4000
 
 #############
 # onboarding Configuration
-USER_TABLE_NAME=users
+AUTH_TABLE_NAME=users
 
 ############# 
 # Database Configuration
@@ -18,7 +18,7 @@ DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=secret
 DB_NAME=plantilla_node_2025
-DB_SYNCHRONIZE=false
+DB_SYNCHRONIZE=flase
 DB_LOGGING=true
 DB_CONNECTION_LIMIT=1000
 DB_TIMEZONE=Z
@@ -76,3 +76,15 @@ CORS_ORIGIN=*
 CORS_METHODS=GET,HEAD,PUT,PATCH,POST,DELETE
 CORS_CREDENTIALS=true
 
+
+# Configuración de Geolocalización (Opcional)
+# ============================================
+
+# API Key para ipinfo.io (opcional, para más requests sin límite)
+IPINFO_API_KEY=your_ipinfo_api_key_here
+
+# Configuración de sesiones con geolocalización
+SESSION_ENABLE_GEOLOCATION=true
+SESSION_MAX_CONCURRENT_SESSIONS=3
+SESSION_TIMEOUT_MINUTES=30
+SESSION_ALLOW_MULTIPLE_DEVICES=true
