[FIX] env and sessions

--- a/environments/.env.local
+++ b/environments/.env.local
@@ -18,7 +18,7 @@ DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=secret
 DB_NAME=plantilla_node_2025
-DB_SYNCHRONIZE=flase
+DB_SYNCHRONIZE=false
 DB_LOGGING=true
 DB_CONNECTION_LIMIT=1000
 DB_TIMEZONE=Z
