[Add] conection api notifications

--- a/environments/.env.local
+++ b/environments/.env.local
@@ -88,3 +88,8 @@ SESSION_ENABLE_GEOLOCATION=true
 SESSION_MAX_CONCURRENT_SESSIONS=3
 SESSION_TIMEOUT_MINUTES=30
 SESSION_ALLOW_MULTIPLE_DEVICES=true
+
+# Configuración de la API de Notificaciones
+# ============================================
+
+NOTIFICATION_API_URL=https://localhost:5000/api/v1
