--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "Juan Vasquez",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -38,6 +39,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "express-oauth-server": "^2.0.0",
     "express-rate-limit": "^7.5.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
@@ -51,6 +53,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
     "nodemailer-express-handlebars": "^6.1.0",
+    "oauth2-server": "^3.1.1",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
     "typeorm": "^0.3.21",
@@ -76,6 +79,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/nodemailer-express-handlebars": "^4.0.5",
+    "@types/oauth2-server": "^3.0.18",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
