--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "nodemailer": "^6.10.1",
     "nodemailer-express-handlebars": "^6.1.0",
     "oauth2-server": "^3.1.1",
+    "pdfmake": "^0.2.20",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
+    "typedi": "^0.10.0",
     "typeorm": "^0.3.21",
     "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0",
@@ -80,6 +82,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/oauth2-server": "^3.0.18",
+    "@types/pdfmake": "^0.2.11",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
