--- a/package.json
+++ b/package.json
@@ -22,9 +22,20 @@
     "db:seed": "ts-node src/infrastructure/database/seeds/index.ts",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "generate-key": "node generate-key.js",
-    "generate-key:1d": "node generate-key.js 1d",
-    "generate-key:7d": "node generate-key.js 7d"
+    "generate-key": "node src/scripts/generate-key.js",
+    "generate-key:1d": "node src/scripts/generate-key.js 1d",
+    "generate-key:7d": "node src/scripts/generate-key.js 7d",
+    "encrypt:all": "ts-node src/scripts/encrypt-for-testing.ts all",
+    "encrypt": "ts-node src/scripts/encrypt-for-testing.ts",
+    "encrypt:0": "ts-node src/scripts/encrypt-for-testing.ts 0",
+    "encrypt:1": "ts-node src/scripts/encrypt-for-testing.ts 1",
+    "encrypt:2": "ts-node src/scripts/encrypt-for-testing.ts 2",
+    "encrypt:iv": "ts-node src/scripts/encrypt-for-testing.ts iv",
+    "encrypt:plain": "ts-node src/scripts/encrypt-for-testing.ts plain",
+    "encrypt:help": "ts-node src/scripts/encrypt-for-testing.ts help",
+    "test:encryption": "ts-node src/scripts/encrypt-for-testing.ts all",
+    "test:encryption:debug": "ts-node src/scripts/encrypt-for-testing.ts all",
+    "test:middleware": "echo \"Use npm run encrypt:all to test encryption middleware\""
   },
   "author": "Juan Vasquez",
   "license": "ISC",
@@ -77,7 +88,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/ms": "^2.1.0",
-    "@types/node": "^22.13.14",
+    "@types/node": "^22.17.1",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/nodemailer-express-handlebars": "^4.0.5",
