--- a/environments/.env.local
+++ b/environments/.env.local
@@ -77,7 +77,7 @@ CORS_METHODS=GET,HEAD,PUT,PATCH,POST,DELETE
 CORS_CREDENTIALS=true
 
 
-# Configuración de Geolocalización (Opcional)
+# Configuración de Geolocalización
 # ============================================
 
 # API Key para ipinfo.io (opcional, para más requests sin límite)
@@ -93,3 +93,9 @@ SESSION_ALLOW_MULTIPLE_DEVICES=true
 # ============================================
 
 NOTIFICATION_API_URL=https://localhost:5000/api/v1
+
+
+# Configuración de la API de Autenticación
+# ============================================
+
+ENCRYPTION_KEY="9m8qV+7Yy2pLz4gH3tR0bF6uK1wN0sQvZxY4a1B7cR="
