--- a/package.json
+++ b/package.json
@@ -78,9 +78,9 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/compression": "^1.7.5",
+    "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.18",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.2",
     "@types/handlebars": "^4.0.40",
     "@types/helmet": "^0.0.48",
@@ -90,10 +90,11 @@
     "@types/ms": "^2.1.0",
     "@types/node": "^22.17.1",
     "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer": "^6.4.17",
     "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/oauth2-server": "^3.0.18",
     "@types/pdfmake": "^0.2.11",
+    "@types/ua-parser-js": "^0.7.39",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
