--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mysql:
     image: mysql:latest
@@ -14,19 +12,61 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+    networks:
+      - microservices
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
     container_name: plantilla_node_2025_phpmyadmin
     restart: always
     environment:
-      PMA_HOST: plantilla_node_2025_mysql
+      PMA_HOST: mysql
       PMA_USER: admin
-      PMA_PASSWORD: secret
+      PMA_PASSWORD: 2025*plantillA
     ports:
       - "8080:80"
     depends_on:
       - mysql
+    networks:
+      - microservices
+
+  redis:
+    image: redis:7-alpine
+    container_name: notifications_redis
+    restart: always
+    ports:
+      - "6379:6379"
+    networks:
+      - microservices
+
+  redisinsight:
+    image: redis/redisinsight:latest
+    container_name: redis_insight
+    restart: always
+    ports:
+      - "5540:5540"
+    networks:
+      - microservices
+    depends_on:
+      - redis
+
+  bullboard:
+    image: deadly0/bull-board:latest
+    container_name: bull_board
+    restart: always
+    ports:
+      - "3001:3000"
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    networks:
+      - microservices
+    depends_on:
+      - redis
 
 volumes:
   mysql_data:
+
+networks:
+  microservices:
+    driver: bridge
