--- a/environments/.env.local
+++ b/environments/.env.local
@@ -94,6 +94,10 @@ SESSION_ALLOW_MULTIPLE_DEVICES=true
 
 NOTIFICATION_API_URL=https://localhost:5000/api/v1
 
+# Configuración de la API de Files
+# ============================================
+
+FILE_API_URL=https://localhost:6000/api/
 
 # Configuración de la API de Autenticación
 # ============================================
