--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/ms": "^2.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.17.1",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
@@ -101,6 +102,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.9",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
